--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
-  - aiohttp=3.12.15=py311h2fe624c_0
+  - aiohttp=3.13.3=py311h6771f6e_0
   - aiosignal=1.4.0=pyhd8ed1ab_0
   - alabaster=1.0.0=pyhd8ed1ab_1
   - altgraph=0.17.4=pyhd8ed1ab_1
@@ -28,8 +28,8 @@ dependencies:
   - bleach-with-css=6.2.0=h82add2a_4
   - bzip2=1.0.8=hd037594_8
   - c-ares=1.34.5=h5505292_0
-  - ca-certificates=2025.8.3=hbd8a1cb_0
-  - certifi=2025.8.3=pyhd8ed1ab_0
+  - ca-certificates=2026.1.4=hbd8a1cb_0
+  - certifi=2026.1.4=pyhd8ed1ab_0
   - cffi=2.0.0=py311hcfc1310_0
   - chardet=5.2.0=pyhd8ed1ab_3
   - charset-normalizer=3.4.3=pyhd8ed1ab_0
@@ -164,7 +164,7 @@ dependencies:
   - numpydoc=1.9.0=pyhe01879c_1
   - openjpeg=2.5.2=h54b8e55_0
   - openldap=2.6.5=h7c5f683_0
-  - openssl=3.5.3=h5503f6c_1
+  - openssl=3.6.1=hd24854e_1
   - outcome=1.3.0.post0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
   - pandoc=3.8.1=hce30654_0
@@ -189,7 +189,7 @@ dependencies:
   - pthread-stubs=0.4=hd74edd7_1002
   - ptyprocess=0.7.0=pyhd8ed1ab_1
   - pure_eval=0.2.3=pyhd8ed1ab_1
-  - py2app=0.28.8=py311h917b07b_1
+  - py2app=0.28.9=py311h9408147_0
   - pycodestyle=2.12.1=pyhd8ed1ab_1
   - pyconify=0.2.1=pyhd8ed1ab_0
   - pycparser=2.22=pyh29332c3_1
