--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,6 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
-  - aiohttp=3.13.3=py311h6771f6e_0
-  - aiosignal=1.4.0=pyhd8ed1ab_0
   - alabaster=1.0.0=pyhd8ed1ab_1
   - altgraph=0.17.4=pyhd8ed1ab_1
   - applaunchservices=0.3.0=pyh534df25_4
@@ -13,14 +10,12 @@ dependencies:
   - arrow=1.3.0=pyhd8ed1ab_1
   - astroid=3.3.11=py311h267d04e_1
   - asttokens=3.0.0=pyhd8ed1ab_1
-  - asyncssh=2.21.1=pyhd8ed1ab_0
   - atomicwrites=1.4.1=pyhd8ed1ab_1
   - attrs=25.3.0=pyh71513ae_0
   - autopep8=2.0.4=pyhd8ed1ab_0
   - babel=2.17.0=pyhd8ed1ab_0
   - backports=1.0=pyhd8ed1ab_5
   - backports.tarfile=1.2.0=pyhd8ed1ab_1
-  - bcrypt=5.0.0=py311h71babbd_0
   - beautifulsoup4=4.14.2=pyha770c72_0
   - binaryornot=0.4.4=pyhd8ed1ab_2
   - black=25.1.0=pyh866005b_0
@@ -38,12 +33,10 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.3=pyhe01879c_0
   - cookiecutter=2.6.0=pyhd8ed1ab_1
-  - cryptography=45.0.7=py311h0107818_1
   - cyrus-sasl=2.1.28=h9131b1a_1
   - debugpy=1.8.17=py311hc58e375_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - deprecated=1.2.18=pyhd8ed1ab_0
   - diff-match-patch=20241021=pyhd8ed1ab_1
   - dill=0.4.0=pyhd8ed1ab_0
   - docopt=0.6.2=pyhd8ed1ab_2
@@ -54,8 +47,6 @@ dependencies:
   - filprofiler=2023.3.1=py311h0ce7a5d_0
   - flake8=7.1.2=pyhd8ed1ab_0
   - freetype=2.14.1=hce30654_0
-  - frozenlist=1.7.0=py311h8740443_0
-  - fzf=0.65.2=h708ec5c_0
   - gettext=0.25.1=h3dcc1bd_0
   - gettext-tools=0.25.1=h493aca8_0
   - glib=2.86.0=h52a91e1_0
@@ -146,7 +137,6 @@ dependencies:
   - mistune=3.1.4=pyhcf101f3_0
   - modulegraph=0.19.6=pyhd8ed1ab_1
   - more-itertools=10.8.0=pyhd8ed1ab_0
-  - multidict=6.6.3=py311h30e7462_0
   - mypy_extensions=1.1.0=pyha770c72_0
   - mysql=5.7.24=ha71a6ea_2
   - mysql-common=9.3.0=hd7719f6_0
@@ -184,29 +174,23 @@ dependencies:
   - ply=3.11=pyhd8ed1ab_3
   - prompt-toolkit=3.0.52=pyha770c72_0
   - prompt_toolkit=3.0.52=hd8ed1ab_0
-  - propcache=0.3.1=py311h4921393_0
   - psutil=7.1.0=py311h9408147_0
   - pthread-stubs=0.4=hd74edd7_1002
   - ptyprocess=0.7.0=pyhd8ed1ab_1
   - pure_eval=0.2.3=pyhd8ed1ab_1
   - py2app=0.28.9=py311h9408147_0
   - pycodestyle=2.12.1=pyhd8ed1ab_1
-  - pyconify=0.2.1=pyhd8ed1ab_0
   - pycparser=2.22=pyh29332c3_1
   - pydocstyle=6.3.0=pyhd8ed1ab_1
   - pyflakes=3.2.0=pyhd8ed1ab_1
-  - pygithub=2.8.1=pyhd8ed1ab_0
   - pygments=2.19.2=pyhd8ed1ab_0
   - pyinstaller=6.16.0=py311h5fc7159_0
   - pyinstaller-hooks-contrib=2025.9=pyhd8ed1ab_0
-  - pyjwt=2.10.1=pyhd8ed1ab_0
   - pylint=3.3.8=pyhe01879c_0
   - pylint-venv=3.0.4=pyhd8ed1ab_1
   - pyls-spyder=0.4.0=pyhd8ed1ab_1
-  - pynacl=1.6.0=py311h9408147_0
   - pyobjc-framework-coreservices=11.1=py311h917b07b_0
   - pyobjc-framework-fsevents=11.1=py311h267d04e_0
-  - pyopenssl=25.1.0=pyhd8ed1ab_0
   - pypdf=6.1.1=pyhcf101f3_0
   - pyqt=5.15.10=py311h313beb8_1
   - pyqt5-sip=12.13.0=py311h80987f9_1
@@ -215,7 +199,6 @@ dependencies:
   - python=3.11.6=h47c9636_0_cpython
   - python-dateutil=2.9.0post0=py311hca03da5_2
   - python-fastjsonschema=2.21.2=pyhe01879c_0
-  - python-gssapi=1.8.2=py311h336e1dd_2
   - python-lsp-black=2.0.0=pyhff2d567_1
   - python-lsp-jsonrpc=1.1.2=pyhff2d567_1
   - python-lsp-server=1.12.2=pyhff2d567_0
@@ -225,17 +208,15 @@ dependencies:
   - python_abi=3.11=8_cp311
   - pytoolconfig=1.2.6=py311hca03da5_0
   - pytz=2025.2=pyhd8ed1ab_0
-  - pyuca=1.2=pyhd8ed1ab_2
-  - pyxdg=0.28=pyhd8ed1ab_0
   - pyyaml=6.0.3=py311ha9b3269_0
   - pyzmq=27.1.0=py311h13abfa4_0
   - qdarkstyle=3.2.3=pyhd8ed1ab_1
   - qstylizer=0.2.4=pyhff2d567_0
   - qt-main=5.15.2=h0917680_10
   - qt-webengine=5.15.9=h2903aaf_7
-  - qtawesome=1.4.0=pyh9208f05_1
-  - qtconsole=5.6.1=pyhd8ed1ab_2
-  - qtconsole-base=5.6.1=pyha770c72_2
+  - qtawesome=1.3.1=pyh9208f05_1
+  - qtconsole=5.5.2=pyhd8ed1ab_0
+  - qtconsole-base=5.5.2=pyha770c72_0
   - readline=8.2=h1d1bf99_2
   - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.5=pyhd8ed1ab_0
@@ -260,12 +241,10 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_1
   - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_1
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_1
-  - spyder=6.0.8=hd8ed1ab_0
-  - spyder-base=6.0.8=osx_pyh1a5313d_0
-  - spyder-kernels=3.0.5=unix_pyh707e725_0
+  - spyder=5.5.6=py311h267d04e_0
+  - spyder-kernels=2.5.2=unix_pyh707e725_0
   - sqlite=3.50.4=h6e44f1d_0
   - stack_data=0.6.3=pyhd8ed1ab_1
-  - superqt=0.7.6=pyhb6d5dde_0
   - tabulate=0.9.0=pyhd8ed1ab_2
   - text-unidecode=1.3=pyhd8ed1ab_2
   - textdistance=4.6.3=pyhd8ed1ab_1
@@ -296,7 +275,6 @@ dependencies:
   - websocket-client=1.8.0=pyhd8ed1ab_1
   - whatthepatch=1.0.7=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
-  - wrapt=1.17.3=py311h3696347_1
   - wsproto=1.2.0=pyhd8ed1ab_1
   - wurlitzer=3.1.1=pyhd8ed1ab_1
   - xorg-libxau=1.0.12=h5505292_0
@@ -307,7 +285,6 @@ dependencies:
   - yaml=0.2.5=h925e9cb_3
   - yapf=0.43.0=pyhd8ed1ab_1
   - yarg=0.1.9=py_1
-  - yarl=1.20.1=py311h4921393_0
   - zeromq=4.3.5=h2c7f8f0_1
   - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.3.1=h8359307_2
