--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 .*
-!.gitignore
 __*
 *.spec
 inputs/*
-!inputs/README.md
-!inputs/config_template.yaml
 Downloaded/*
-!Downloaded/README.md
 test/*
-!test/README.md
 logs/*
-!logs/README.md
-!logs/logging_config.yaml
+dist/*
 src/build
 src/dist
 main
 session.vim
+!.gitignore
+!inputs/README.md
+!Downloaded/README.md
+!test/README.md
+!logs/README.md
+!logs/logging_config.yaml
